--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 <div class="row gx-4 gx-lg-5 align-items-center">
                     <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://pic.pimg.tw/peko721/1597317276-3005215406-g.jpg" alt="..." /></div>
                     <div class="col-md-6">
-                        <div class="small mb-1">SKU: BST-498</div>
                         <h1 class="display-5 fw-bolder">小王煮瓜滷肉飯</h1>
                         <div class="fs-5 mb-5">
                           
                             <span>NT$30.00 - NT$55.00</span>
                         </div>
-                        <p class="lead">小王煮瓜滷肉飯從第一屆台北米其林就獲選，蟬聯三年依然在榜單上，Google上有兩千多則好評</p>
+                        <p class="lead"> 這裡的滷肉不是用絞肉，而是肉丁，肥肉瘦肉都有的手切肉。米飯煮得粒粒分明又Q彈，也是滷肉飯好吃的重要關鍵。
+                          滷肉燉出膠質，入口後香氣十足，而且肥肉部分在嘴中化開，更能讓滷肉湯汁包覆住米飯，嘴裡充滿了滷肉的香氣，而瘦肉部分可以增添咀嚼時的口感，吃起來不膩口。</p>
                         <div class="d-flex">
                             <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
                             <button class="btn btn-outline-dark flex-shrink-0" type="button">
