--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <span>NT$30.00 - NT$55.00</span>
                         </div>
                         <p class="lead"> 這裡的滷肉不是用絞肉，而是肉丁，肥肉瘦肉都有的手切肉。米飯煮得粒粒分明又Q彈，也是滷肉飯好吃的重要關鍵。
-                          滷肉燉出膠質，入口後香氣十足，而且肥肉部分在嘴中化開，更能讓滷肉湯汁包覆住米飯，嘴裡充滿了滷肉的香氣，而瘦肉部分可以增添咀嚼時的口感，吃起來不膩口。</p>
+                          滷肉燉出膠質，入口後香氣十足，肥肉部分在嘴中化開，更能讓滷肉湯汁包覆住米飯，嘴裡充滿了滷肉的香氣，而瘦肉部分可以增添咀嚼時的口感，吃起來不膩口。</p>
                         <div class="d-flex">
                             <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
                             <button class="btn btn-outline-dark flex-shrink-0" type="button">
