--- a/index.html
+++ b/index.html
@@ -68,89 +68,26 @@
             </div>
         </section>
         <!-- Related items section-->
-        <section class="py-5 bg-light">
-            <div class="container px-4 px-lg-5 mt-5">
-                <h2 class="fw-bolder mb-4">其他美食</h2>
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="https://mutal2001.github.io/newsite0.0/assets/beef-noodles.png" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">富宏牛肉麵</h5>
-                                    <!-- Product price-->
-                                   NT$90.00 - NT$110.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://mutal2001.github.io/Food-beef-noodles/">詳細介紹</a></div>
-                            </div>
+       <section class="py-5 bg-light">
+            <div class="container px-4 px-lg-5 my-5">
+                <h2 class="fw-bolder mb-4">路線</h2>
+                <div class="row gx-4 gx-lg-5 align-items-center">
+                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="assets/6.png" alt="..." /></div>
+                    <div class="col-md-6">
+                        <h1 class="display-5 fw-bolder">捷運龍山寺站</h1>
+                         <div class="fs-5 mb-5">
+                            <span></span>
+                        </div>
+                        <p class="lead">這裏輸入路綫過程~</p>
+                        <div class="d-flex">
+                            <a class="btn btn-outline-dark mt-auto" href="https://www.google.com.tw/maps/dir/%E5%8F%B0%E5%8C%97%E5%B8%82%E8%90%AC%E8%8F%AF%E5%8D%80%E9%BE%8D%E5%B1%B1%E5%AF%BA%E7%AB%99/%E5%8F%B0%E5%8C%97%E5%B8%82%E8%90%AC%E8%8F%AF%E5%8D%80%E8%8F%AF%E8%A5%BF%E8%A1%97%E5%B0%8F%E7%8E%8B%E7%85%AE%E7%93%9C%EF%BC%88%E5%B0%8F%E7%8E%8B%E6%B8%85%E6%B9%AF%E7%93%9C%E4%BB%94%E8%82%89%EF%BC%89%EF%BC%8D%E8%90%AC%E8%8F%AF%E7%BE%8E%E9%A3%9F.%E9%BE%8D%E5%B1%B1%E5%AF%BA%E7%BE%8E%E9%A3%9F.%E8%8F%AF%E8%A5%BF%E8%A1%97%E7%BE%8E%E9%A3%9F.%E5%BF%85%E6%AF%94%E7%99%BB%E5%8F%B0%E5%8C%97%E7%BE%8E%E9%A3%9F.%E9%BB%91%E9%87%91%E9%AD%AF%E8%82%89%E9%A3%AF/@25.0372568,121.4972729,17z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x3442a9aed8cf8151:0x6419337e5910858d!2m2!1d121.49983!2d25.03528!1m5!1m1!1s0x3442a9a90a87a819:0xf976a36a0efc0079!2m2!1d121.4985524!2d25.0392311!3e2?hl=zh-TW" target="_blank">地圖</a>
+                              
                         </div>
                     </div>
-                   <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="https://mutal2001.github.io/newsite0.0/assets/Oyster%20Vermicelli.png" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">黃金麵線</h5>
-                                    <!-- Product price-->
-                                 NT$50.00 - NT$65.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://mutal2001.github.io/Food-Vermecelli/">詳細介紹</a></div>
-                            </div>
-                        </div>
-                    </div>
-                     <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="https://mutal2001.github.io/newsite0.0/assets/stinky-tofu.png" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">宋上好脆皮臭豆腐</h5>
-                                    <!-- Product price-->
-                                 NT$60.00 - NT$95.00
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://mutal2001.github.io/Food-stinky-tofu/">詳細介紹</a></div>
-                            </div>
-                        </div>
-                    </div>
-                     <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="https://mutal2001.github.io/newsite0.0/assets/Bak-Kut-Teh.png" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">萬得富爸爸肉骨茶</h5>
-                                    <!-- Product price-->
-                                  NT$250
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://mutal2001.github.io/Food-Bak-Kut-Teh/">詳細介紹</a></div>
-                            </div>
-                        </div>
-                    </div>
-            </section>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
+                </div>
+            </div>
+        </section>
+      <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
         </footer>
         <!-- Bootstrap core JS-->
