--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                          <div class="fs-5 mb-5">
                             <span></span>
                         </div>
-                        <p class="lead">這裏輸入路綫過程~</p>
+                        <p class="lead">由捷運龍山寺站1號出口，步行約8分鐘即可抵達。</p>
                         <div class="d-flex">
                             <a class="btn btn-outline-dark mt-auto" href="https://www.google.com.tw/maps/dir/%E5%8F%B0%E5%8C%97%E5%B8%82%E8%90%AC%E8%8F%AF%E5%8D%80%E9%BE%8D%E5%B1%B1%E5%AF%BA%E7%AB%99/%E5%8F%B0%E5%8C%97%E5%B8%82%E8%90%AC%E8%8F%AF%E5%8D%80%E8%8F%AF%E8%A5%BF%E8%A1%97%E5%B0%8F%E7%8E%8B%E7%85%AE%E7%93%9C%EF%BC%88%E5%B0%8F%E7%8E%8B%E6%B8%85%E6%B9%AF%E7%93%9C%E4%BB%94%E8%82%89%EF%BC%89%EF%BC%8D%E8%90%AC%E8%8F%AF%E7%BE%8E%E9%A3%9F.%E9%BE%8D%E5%B1%B1%E5%AF%BA%E7%BE%8E%E9%A3%9F.%E8%8F%AF%E8%A5%BF%E8%A1%97%E7%BE%8E%E9%A3%9F.%E5%BF%85%E6%AF%94%E7%99%BB%E5%8F%B0%E5%8C%97%E7%BE%8E%E9%A3%9F.%E9%BB%91%E9%87%91%E9%AD%AF%E8%82%89%E9%A3%AF/@25.0372568,121.4972729,17z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x3442a9aed8cf8151:0x6419337e5910858d!2m2!1d121.49983!2d25.03528!1m5!1m1!1s0x3442a9a90a87a819:0xf976a36a0efc0079!2m2!1d121.4985524!2d25.0392311!3e2?hl=zh-TW" target="_blank">地圖</a>
                               
